--- a/mp_tut1_scatter_line_marker_subplot_save_readCSV.ipynb
+++ b/mp_tut1_scatter_line_marker_subplot_save_readCSV.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dc9a42e5-b004-4eda-bb9c-b6ddc5b7dd80",
+   "metadata": {},
+   "source": [
+    "# Concepts covered\n",
+    "- scatter, plot, line, marker, subplot\n",
+    "- label x-axis, y-axis\n",
+    "- adding title. legend\n",
+    "- save figure into a file\n",
+    "- read a CSV file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "0b4636ec-3458-4b04-9db7-8bfa46adfb04",
@@ -469,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "b49989e3-0abf-4826-9986-839e6e3b1ea6",
    "metadata": {},
    "outputs": [
@@ -492,6 +505,8 @@
     "x = np.array([80, 85, 90, 95, 100, 105, 110, 115, 120, 125])\n",
     "y = np.array([240, 250, 260, 270, 280, 290, 300, 310, 320, 330])\n",
     "\n",
+    "plt.plot(x, y)\n",
+    "\n",
     "font1 = {'family':'serif','color':'blue','size':20}\n",
     "font2 = {'family':'serif','color':'darkred','size':15}\n",
     "\n",
@@ -499,7 +514,6 @@
     "plt.xlabel(\"Height\", fontdict = font2)\n",
     "plt.ylabel(\"weight\", fontdict = font2)\n",
     "\n",
-    "plt.plot(x, y)\n",
     "plt.show()"
    ]
   },
