--- a/tut_mp4_boxplot.ipynb
+++ b/tut_mp4_boxplot.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "size = 100\n",
     "mean = 40\n",
-    "std=5\n",
+    "std=5 # 68% of the value would be +/-5 around the mean\n",
     "# Generate normally distributed values with mean=40 and std=20\n",
     "random_normal = np.random.normal(loc=mean, scale=std, size=size) # age of people from  a sample of size\n",
     "\n",
