--- a/tut_mp4_boxplot.ipynb
+++ b/tut_mp4_boxplot.ipynb
@@ -9,6 +9,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b727f830",
+   "metadata": {},
+   "source": [
+    "### Boxplot shows:\n",
+    "- Minimum (excluding outliers): The smallest data point still within 1.5 IQR of the lower quartile.\n",
+    "- First Quartile (Q1): 25% of the data fall below this value.\n",
+    "- Median (Q2): The middle value (50% of the data fall below this).\n",
+    "- Third Quartile (Q3): 75% of the data fall below this value.\n",
+    "- Maximum (excluding outliers): The largest data point still within 1.5 IQR of the upper quartile.\n",
+    "\n",
+    "### Box Components:\n",
+    "- Box: Spans from Q1 to Q3 (the interquartile range, or IQR). It shows the middle 50% of the data.\n",
+    "- Line inside the box: The median.\n",
+    "- Whiskers: Extend from the box to the minimum and maximum values within 1.5 * IQR from Q1 and Q3.\n",
+    "- Dots (Outliers): Individual points that fall outside the whiskers (i.e., more than 1.5 * IQR from the quartiles).\n",
+    "\n",
+    "\n",
+    "### What You Can Learn from a Boxplot:\n",
+    "- 1) Central tendency (via the median).\n",
+    "- 2) Spread of the data (via the IQR and whiskers).\n",
+    "- 3) Skewness:\n",
+    "\n",
+    "     If the median is closer to Q1 → right-skewed.\n",
+    "\n",
+    "     If the median is closer to Q3 → left-skewed.\n",
+    "\n",
+    "- 4) Presence of outliers.\n",
+    "- 5) Comparison between groups (boxplots are great for side-by-side comparison across categories)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b9651f19-9efe-49e7-a2e0-db8c6f0bfe3d",
