--- a/tut_mp2_bar_heatmap.ipynb
+++ b/tut_mp2_bar_heatmap.ipynb
@@ -268,6 +268,7 @@
    ],
    "source": [
     "# application1\n",
+    "import pandas as pd # TODO\n",
     "df = pd.read_csv(\"data_realworld_correlated.csv\")\n",
     "# print(df.head(5))\n",
     "print(df.corr().round(2))\n",
