--- a/tut_mp4_boxplot.ipynb
+++ b/tut_mp4_boxplot.ipynb
@@ -104,7 +104,7 @@
    "id": "de590abe-a611-463d-b4e5-ba874f055a8a",
    "metadata": {},
    "source": [
-    "## lets determine Q1, Q2,Q3,mean,etc of above"
+    "## lets determine Q1, Q2, Q3, mean,etc of above"
    ]
   },
   {
@@ -143,9 +143,11 @@
     "\n",
     "# Calculate the interquartile range (IQR)\n",
     "IQR = Q3 - Q1\n",
+    "lower_bound = (Q1 - 1.5 * IQR)\n",
+    "upper_bound = (Q3 + 1.5 * IQR)\n",
     "\n",
     "# Identify outliers (any data points outside 1.5 * IQR above Q3 or below Q1)\n",
-    "outliers = data[(data < (Q1 - 1.5 * IQR)) | (data > (Q3 + 1.5 * IQR))]\n",
+    "outliers = data[(data < lower_bound) | (data > upper_bound)]\n",
     "\n",
     "# Print out the values\n",
     "print(f\"Stats:\")\n",
@@ -389,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
