--- a/tut_seaborn_1_tips_v1_simple.ipynb
+++ b/tut_seaborn_1_tips_v1_simple.ipynb
@@ -5,7 +5,7 @@
    "id": "ce278a18-39c5-4374-926f-00dd422cf08a",
    "metadata": {},
    "source": [
-    "# SEABORN tutorial vi tips datset\n",
+    "# SEABORN tutorial via tips datset\n",
     "\n",
     "- Seaborn = Easy, beautiful plots.\n",
     "- Matplotlib = Full control & customization.\n",
@@ -53,7 +53,7 @@
    ],
    "source": [
     "# Basic scatter plot:\n",
-    "age = [20, 42, 50, 33]\n",
+    "age    = [20,     42,    50,    33]\n",
     "income = [30000, 45000, 90000, 65000]\n",
     "\n",
     "sns.scatterplot(x=age, y=income) # Scatter plot using Seaborn\n",
@@ -102,36 +102,6 @@
     "# day: Day of the week — \"Thur\", \"Fri\", \"Sat\", or \"Sun\"\n",
     "# time: Time of the meal — \"Lunch\" or \"Dinner\"\n",
     "# size: Number of people at the table (party size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d1feb00c-43e8-4b00-9508-ffa80302480a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   total_bill   tip     sex smoker  day    time  size\n",
-      "0       16.99  1.01  Female     No  Sun  Dinner     2\n",
-      "1       10.34  1.66    Male     No  Sun  Dinner     3\n",
-      "2       21.01  3.50    Male     No  Sun  Dinner     3\n",
-      "3       23.68  3.31    Male     No  Sun  Dinner     2\n",
-      "4       24.59  3.61  Female     No  Sun  Dinner     4\n",
-      "5       25.29  4.71    Male     No  Sun  Dinner     4\n",
-      "6        8.77  2.00    Male     No  Sun  Dinner     2\n",
-      "7       26.88  3.12    Male     No  Sun  Dinner     4\n",
-      "8       15.04  1.96    Male     No  Sun  Dinner     2\n",
-      "9       14.78  3.23    Male     No  Sun  Dinner     2\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Load built-in dataset\n",
-    "df = sns.load_dataset(\"tips\")\n",
-    "print(df.head(10))"
    ]
   },
   {
@@ -261,6 +231,7 @@
     }
    ],
    "source": [
+    "# Lets do box plot of tip with categorized by day\n",
     "sns.boxplot(data = df, x = 'day', y = 'tip') # x should be category, y should be numeric\n",
     "plt.show()\n",
     "\n",
@@ -361,6 +332,7 @@
     }
    ],
    "source": [
+    "# # lets see total_bill categorized by Sex\n",
     "sns.boxplot(data = df, x='day', y='total_bill', hue = 'sex') # x should be category, y should be numeric\n",
     "plt.show()\n",
     "\n",
@@ -385,7 +357,8 @@
     }
    ],
    "source": [
-    "sns.boxplot(data = df, x='day', y='total_bill', hue = 'time') # x should be category, y should be numeric\n",
+    "# lets see total_bill categorized by time\n",
+    "sns.boxplot(data=df, x='day', y='total_bill', hue = 'time') # x should be category, y should be numeric\n",
     "plt.show()\n",
     "\n",
     "# obs: not many people come for dinner on thur\n",
@@ -411,7 +384,7 @@
     }
    ],
    "source": [
-    "# violin plot \n",
+    "# violin plot of total_bill categorized by day\n",
     "sns.violinplot(data=df, x='day', y='total_bill')\n",
     "plt.show()\n",
     "\n",
@@ -436,7 +409,7 @@
     }
    ],
    "source": [
-    "# Violin plot to show distribution and density\n",
+    "# Violin plot of total_bill categorized by day and sex. To show distribution and density\n",
     "sns.violinplot(data=df, x=\"day\", y=\"total_bill\", hue=\"sex\", split=True)\n",
     "plt.title(\"Violin Plot of Total Bill by Day and Gender\")\n",
     "plt.show()\n",
@@ -534,10 +507,13 @@
     }
    ],
    "source": [
-    "# Count of categorical values\n",
+    "# Count of categorical values: Count of Visitors by Day and Gender\n",
+    "\n",
     "sns.countplot(data=df, x=\"day\", hue=\"sex\")\n",
     "plt.title(\"Count of Visitors by Day and Gender\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# obs: Lot more Males on Sat and Sun"
    ]
   },
   {
@@ -565,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
