--- a/tut_seaborn_1_tips_v2_detailed.ipynb
+++ b/tut_seaborn_1_tips_v2_detailed.ipynb
@@ -237,10 +237,10 @@
    ],
    "source": [
     "# Lets find the labels in categorical variables\n",
-    "print('sex', df['sex'].unique())\n",
-    "print('smoker', df['smoker'].unique())\n",
-    "print('day', df['day'].unique())\n",
-    "print('time', df['time'].unique())"
+    "print('sex', df['sex'].unique(), \"\\n\")\n",
+    "print('smoker', df['smoker'].unique(), \"\\n\")\n",
+    "print('day', df['day'].unique(), \"\\n\")\n",
+    "print('time', df['time'].unique(), \"\\n\")"
    ]
   },
   {
@@ -3429,7 +3429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   },
   "papermill": {
    "duration": 64.657946,
