--- a/tut_seaborn_2_IrisTipsPenguins_scatter_histogram_box_violen_pairwise_count.ipynb
+++ b/tut_seaborn_2_IrisTipsPenguins_scatter_histogram_box_violen_pairwise_count.ipynb
@@ -82,8 +82,6 @@
    ],
    "source": [
     "# Seaborn Scatter Plot Examples\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Dataset 1: Iris\n",
     "iris = sns.load_dataset(\"iris\")\n",
@@ -94,14 +92,14 @@
     "\n",
     "# Dataset 2: Tips\n",
     "tips = sns.load_dataset(\"tips\")\n",
-    "print(tips.head(5))\n",
+    "print(\"+++++\\n\\n\", tips.head(5))\n",
     "sns.scatterplot(data=tips, x=\"total_bill\", y=\"tip\", hue=\"sex\", style=\"time\")\n",
     "plt.title(\"Tips Dataset - Total Bill vs Tip\")\n",
     "plt.show()\n",
     "\n",
     "# Dataset 3: Penguins\n",
     "penguins = sns.load_dataset(\"penguins\")\n",
-    "print(penguins.head(5))\n",
+    "print(\"+++++\\n\\n\", penguins.head(5))\n",
     "sns.scatterplot(data=penguins, x=\"flipper_length_mm\", y=\"body_mass_g\", hue=\"species\", style=\"sex\")\n",
     "plt.title(\"Penguins Dataset - Flipper Length vs Body Mass\")\n",
     "plt.show()"
@@ -152,11 +150,13 @@
     "sns.histplot(data=iris, x=\"petal_length\", hue=\"species\", kde=True, palette=\"Set2\")\n",
     "plt.title(\"Iris Dataset - Petal Length Distribution\")\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "# Dataset 2: Tips\n",
     "sns.histplot(data=tips, x=\"total_bill\", hue=\"sex\", kde=True, palette=\"pastel\")\n",
     "plt.title(\"Tips Dataset - Total Bill Distribution by Gender\")\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "# Dataset 3: Penguins\n",
     "sns.histplot(data=penguins, x=\"body_mass_g\", hue=\"species\", kde=True, palette=\"muted\")\n",
@@ -219,11 +219,13 @@
     "sns.boxplot(data=iris, x=\"species\", y=\"sepal_length\", palette=\"Set3\")\n",
     "plt.title(\"Iris Dataset - Sepal Length by Species\")\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "# Dataset 2: Tips\n",
     "sns.boxplot(data=tips, x=\"day\", y=\"total_bill\", hue=\"sex\", palette=\"pastel\")\n",
     "plt.title(\"Tips Dataset - Total Bill by Day and Gender\")\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "# Dataset 3: Penguins\n",
     "sns.boxplot(data=penguins, x=\"species\", y=\"body_mass_g\", hue=\"sex\", palette=\"muted\")\n",
@@ -286,11 +288,13 @@
     "sns.violinplot(data=iris, x=\"species\", y=\"sepal_length\", palette=\"Set2\")\n",
     "plt.title(\"Iris Dataset - Sepal Length by Species (Violin Plot)\")\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "# Dataset 2: Tips\n",
     "sns.violinplot(data=tips, x=\"day\", y=\"total_bill\", hue=\"sex\", split=True, palette=\"pastel\")\n",
     "plt.title(\"Tips Dataset - Total Bill by Day and Gender (Violin Plot)\")\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "# Dataset 3: Penguins\n",
     "sns.violinplot(data=penguins, x=\"species\", y=\"body_mass_g\", hue=\"sex\", split=True, palette=\"muted\")\n",
@@ -342,11 +346,13 @@
     "sns.pairplot(iris, hue=\"species\", palette=\"Set2\")\n",
     "plt.suptitle(\"Iris Dataset - Pairwise Relationships\", y=1.02)\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "# Dataset 2: Tips\n",
     "sns.pairplot(tips, hue=\"sex\", vars=[\"total_bill\", \"tip\", \"size\"], palette=\"pastel\")\n",
     "plt.suptitle(\"Tips Dataset - Pairwise Relationships\", y=1.02)\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "# Dataset 3: Penguins\n",
     "sns.pairplot(penguins.dropna(), hue=\"species\", palette=\"muted\")\n",
@@ -400,12 +406,7 @@
     }
    ],
    "source": [
-    "# ================================\n",
     "# Part 3: Correlation Matrix with Seaborn (Updated)\n",
-    "# ================================\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
     "\n",
     "print(\"\\n=== Correlation Matrix ===\")\n",
     "\n",
@@ -413,26 +414,33 @@
     "\n",
     "# Compute the correlation matrix\n",
     "correlation_matrix_iris = iris_numeric.corr()\n",
+    "print(\"correlation_matrix_iris:\\n\", correlation_matrix_iris)\n",
     "\n",
     "# Create a heatmap of the correlation matrix for Iris dataset\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(correlation_matrix_iris, annot=True, cmap=\"coolwarm\", fmt=\".2f\", linewidths=0.5)\n",
     "plt.title(\"Iris Dataset - Correlation Matrix\")\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "tips_numeric = tips.select_dtypes(include=['float64', 'int64'])\n",
     "\n",
     "# Create a heatmap of the correlation matrix for Tips dataset\n",
     "correlation_matrix_tips = tips_numeric.corr()\n",
+    "print(\"correlation_matrix_tips:\\n\", correlation_matrix_tips)\n",
+    "\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(correlation_matrix_tips, annot=True, cmap=\"YlGnBu\", fmt=\".2f\", linewidths=0.5)\n",
     "plt.title(\"Tips Dataset - Correlation Matrix\")\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "penguins_numeric = penguins.select_dtypes(include=['float64', 'int64'])\n",
     "\n",
     "# Create a heatmap of the correlation matrix for Penguins dataset\n",
     "correlation_matrix_penguins = penguins_numeric.corr()\n",
+    "print(\"correlation_matrix_penguins:\\n\", correlation_matrix_penguins)\n",
+    "\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(correlation_matrix_penguins, annot=True, cmap=\"viridis\", fmt=\".2f\", linewidths=0.5)\n",
     "plt.title(\"Penguins Dataset - Correlation Matrix\")\n",
@@ -477,24 +485,21 @@
     }
    ],
    "source": [
-    "# ================================\n",
     "# Part 5: Count Plot of Categorical Values\n",
-    "# ================================\n",
-    "\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Count plot for categorical values (species column)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.countplot(data=iris, x=\"species\")\n",
     "plt.title(\"Iris Dataset - Count of Species\")\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "# Count plot for categorical values (day column) with hue based on sex\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.countplot(data=tips, x=\"day\", hue=\"sex\")\n",
     "plt.title(\"Tips Dataset - Count of Days by Sex\")\n",
     "plt.show()\n",
+    "print(\"++++\\n\\n\")\n",
     "\n",
     "# Count plot for categorical values (species column) with hue based on sex\n",
     "plt.figure(figsize=(6, 4))\n",
@@ -528,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
