--- a/tut_mp2_bar_heatmap.ipynb
+++ b/tut_mp2_bar_heatmap.ipynb
@@ -37,12 +37,8 @@
     }
    ],
    "source": [
-    "x = [\"B\", \"Z\", \"D\", \"K\"] # person name\n",
-    "y = [ 3,   4,   3,   7] # height, number of children, number of houses\n",
-    "\n",
-    "# or use numpy array\n",
-    "# x = np.array([\"B\", \"Z\", \"D\", \"K\"]) # person name\n",
-    "# y = np.array([ 3,   4,   3,   7]) # height\n",
+    "x = [\"class9\", \"class10\", \"class11\", \"class12\"] # class\n",
+    "y = [ 3,         4,           3,        7]  # number of children, number of houses\n",
     "\n",
     "plt.bar(x, y, color=\"green\")\n",
     "plt.show()"
@@ -67,11 +63,9 @@
    ],
    "source": [
     "# different colors on  bars\n",
-    "x = [\"B\", \"Z\", \"D\", \"K\"] # person name\n",
-    "y = [ 3,   4,   3,   7] # height\n",
-    "\n",
-    "# use a list of colors\n",
-    "colors = [\"red\", \"blue\", \"green\", \"orange\"]\n",
+    "x      = [\"class9\", \"class10\", \"class11\", \"class12\"] # class\n",
+    "y      = [ 3,         4,           3,        7     ]  # number of children, number of houses\n",
+    "colors = [\"red\",    \"blue\",      \"green\",  \"orange\"]\n",
     "\n",
     "plt.bar(x, y, color=colors)\n",
     "plt.show()"
@@ -97,11 +91,9 @@
    "source": [
     "# draw horizonatal bars\n",
     "# different colors on  bars\n",
-    "x = [\"B\", \"Z\", \"D\", \"K\"] # person name\n",
-    "y = [ 3,   4,   3,   7] # height\n",
-    "\n",
-    "# use a list of colors\n",
-    "colors = [\"red\", \"blue\", \"green\", \"orange\"]\n",
+    "x      = [\"class9\", \"class10\", \"class11\", \"class12\"] # class\n",
+    "y      = [ 3,         4,           3,        7     ]  # number of children, number of houses\n",
+    "colors = [\"red\",    \"blue\",      \"green\",  \"orange\"]\n",
     "\n",
     "plt.barh(x, y, color=colors) # changed bar -> barh\n",
     "plt.show()"
@@ -126,11 +118,11 @@
    ],
    "source": [
     "# now lets change the width\n",
-    "x = [\"B\", \"Z\", \"D\", \"K\"] # person name\n",
-    "y = [ 3,   4,   3,   7] # height\n",
+    "x = [\"class9\", \"class10\", \"class11\", \"class12\"] # class\n",
+    "y = [ 3,         4,           3,        7]  # number of children, number of houses\n",
     "\n",
     "plt.bar(x, y, color=\"green\", width = 0.1)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -217,6 +209,7 @@
     }
    ],
    "source": [
+    "# Heatmap\n",
     "# generating 2D data\n",
     "data = np.random.rand(5,5)\n",
     "print(data.shape)\n",
@@ -483,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
