--- a/tut_mp5_pie_specialplots.ipynb
+++ b/tut_mp5_pie_specialplots.ipynb
@@ -78,10 +78,10 @@
    "source": [
     "# NOTE: uncomment each one below to see what each one does\n",
     "from matplotlib import pyplot as plt\n",
-    "data = [10, 5, 20] # coffee , tea , shake drinkers\n",
-    "# data_labels = ['coffee', 'tea', 'shakes']\n",
-    "# data_colors = ('yellowgreen', 'lightskyblue', 'gold')\n",
-    "# data_explode = (0, 0.1, 0.1)\n",
+    "data         = [10,                  5,           20] # Number of coffee , tea or shake drinkers\n",
+    "# data_labels  = ['coffee',         'tea',        'shakes']\n",
+    "# data_colors  = ('yellowgreen', 'lightskyblue', 'gold')\n",
+    "# data_explode = (0,                0.1,           0.1)\n",
     "\n",
     "\n",
     "plt.pie(\n",
@@ -1165,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
