--- a/seaborn/L04-lineplots.ipynb
+++ b/seaborn/L04-lineplots.ipynb
@@ -110,8 +110,8 @@
     }
    ],
    "source": [
-    "df = sns.load_dataset(\"flights\")\n",
-    "df.head()"
+    "flights = sns.load_dataset(\"flights\")\n",
+    "flights.head()"
    ]
   },
   {
@@ -230,7 +230,7 @@
     }
    ],
    "source": [
-    "df.describe()"
+    "flights.describe()"
    ]
   },
   {
@@ -265,7 +265,7 @@
     }
    ],
    "source": [
-    "sns.lineplot( data=df, x=\"year\", y=\"passengers\")\n",
+    "sns.lineplot( data=flights, x=\"year\", y=\"passengers\")\n",
     "\n",
     "plt.title(\"Airline Passengers Over Time\")\n",
     "plt.show()"
@@ -306,7 +306,7 @@
    ],
    "source": [
     "# with markers\n",
-    "sns.lineplot( data=df, x=\"year\", y=\"passengers\",\n",
+    "sns.lineplot( data=flights, x=\"year\", y=\"passengers\",\n",
     "              errorbar=('ci', True),\n",
     "              marker=\"o\",\n",
     ")\n",
@@ -341,7 +341,7 @@
     }
    ],
    "source": [
-    "sns.lineplot(data=df, x=\"year\", y=\"passengers\", hue=\"month\" )\n",
+    "sns.lineplot(data=flights, x=\"year\", y=\"passengers\", hue=\"month\" )\n",
     "\n",
     "plt.title(\"Monthly Passenger Trends Over Years\")\n",
     "plt.show()"
@@ -399,7 +399,7 @@
     }
    ],
    "source": [
-    "df[\"month\"].unique()"
+    "flights[\"month\"].unique()"
    ]
   },
   {
@@ -438,12 +438,13 @@
     "    \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"\n",
     "]\n",
     "\n",
-    "df[\"month\"] = pd.Categorical(\n",
-    "    df[\"month\"],\n",
+    "flights[\"month\"] = pd.Categorical(\n",
+    "    flights[\"month\"],\n",
     "    categories=month_order,\n",
     "    ordered=True\n",
     ")\n",
-    "df['month']"
+    "\n",
+    "flights['month']"
    ]
   },
   {
@@ -467,7 +468,7 @@
     "sns.lineplot(\n",
     "    x=\"month\",\n",
     "    y=\"passengers\",\n",
-    "    data=df,\n",
+    "    data=flights,\n",
     "    errorbar=None\n",
     ")\n",
     "plt.title(\"Average Passengers by Month\")\n",
