--- a/seaborn/tut_seaborn_1_tips_v1_simple.ipynb
+++ b/seaborn/tut_seaborn_1_tips_v1_simple.ipynb
@@ -931,7 +931,7 @@
     "plt.title(\"Count of Visitors by Day\")\n",
     "plt.show()\n",
     "\n",
-    "# obs: Lot more Males on Sat and Sun"
+    "# obs: Lot more customers on Sat and Sun"
    ]
   },
   {
