--- a/seaborn/L07-boxplot.ipynb
+++ b/seaborn/L07-boxplot.ipynb
@@ -296,6 +296,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa94e010-6246-4ecf-99be-31ee087aab26",
+   "metadata": {},
+   "source": [
+    "# Observation\n",
+    "- 50% of customers payed tip between 2 and 3.6"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "ee29fd79-4f4b-4660-bdca-d6bf6e7f5360",
@@ -323,6 +332,24 @@
     "\n",
     "# The circles are outliers"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf53ec9a-9f59-46ec-8702-8b6df40b1aa0",
+   "metadata": {},
+   "source": [
+    "# Observation:\n",
+    "- 50% of customers on Thur payed tip between 2 and 3.6\n",
+    "- 50% of customers on Sun payed tip amount between 2 and 4.1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a5edd55-d26a-4dd3-a4a5-e53084aa0a80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
