--- a/seaborn/L09-barplot.ipynb
+++ b/seaborn/L09-barplot.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# barplot"
+    "# barplot\n",
+    "- Used for categorical data + numerical"
    ]
   },
   {
@@ -177,6 +178,10 @@
    "id": "43898a87-ade0-4680-8ada-67e89b530ead",
    "metadata": {},
    "source": [
+    "# Observation:\n",
+    "- Average tip is higher for Sat and Sun\n",
+    "\n",
+    "\n",
     "Seaborn automatically calculates mean\n",
     "\n",
     "Error bars show confidence interval"
@@ -228,12 +233,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "511f0168-b7b4-4a23-abcd-f5e50f661bcc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Observation:\n",
+    "- On Fri, the average total bill for male was higher (20) than of that from female(14)\n",
+    "- total bill is always higher for males. The difference is not very high"
+   ]
   },
   {
    "cell_type": "code",
