--- a/seaborn/L11-stripplot.ipynb
+++ b/seaborn/L11-stripplot.ipynb
@@ -181,7 +181,11 @@
    "source": [
     "Each dot = one customer\n",
     "\n",
-    "Vertical spread = distribution"
+    "Vertical spread = distribution\n",
+    "\n",
+    "# Observation:\n",
+    "- Not many custoomers on Fri\n",
+    "\n"
    ]
   },
   {
