--- a/seaborn/L12-swarmplot.ipynb
+++ b/seaborn/L12-swarmplot.ipynb
@@ -170,12 +170,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "6b399d1f-990f-4210-987c-d43ad4811d09",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Observation:\n",
+    "- For Sat, most of total bill was in range of 10 - 30\n"
+   ]
   },
   {
    "cell_type": "code",
